@@ -446,7 +446,19 @@
 		      <property name="spacing">0</property>
 
 		      <child>
-			<placeholder/>
+			<widget class="GtkLabel" id="progress_label">
+			  <property name="visible">False</property>
+			  <property name="label" translatable="yes"></property>
+			  <property name="use_markup">True</property>
+			  <property name="single_line_mode">True</property>
+			  <property name="justify">GTK_JUSTIFY_LEFT</property>
+			</widget>
+			<packing>
+			  <property name="padding">0</property>
+			  <property name="expand">False</property>
+			  <property name="fill">True</property>
+			  <property name="pack_type">GTK_PACK_START</property>
+			</packing>
 		      </child>
 
 		      <child>
